--- a/docker-hive/docker-compose.yml
+++ b/docker-hive/docker-compose.yml
@@ -19,6 +19,10 @@ services:
     image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
     container_name: datanode1
     restart: always
+    ports:
+      - "50010:50010"
+      - "50075:50075"
+      - "9864:9864"
     volumes:
       - hadoop_datanode:/hadoop/dfs/data
     environment:
@@ -30,6 +34,10 @@ services:
     image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
     container_name: datanode2
     restart: always
+    ports:
+      - "50011:50010" # Cambié el puerto a 50011 para evitar conflicto
+      - "50076:50075" # Cambié el puerto a 50076 para evitar conflicto
+      - "9871:9864"
     volumes:
       - hadoop_datanode2:/hadoop/dfs/data
     environment:
@@ -41,6 +49,10 @@ services:
     image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
     container_name: datanode3
     restart: always
+    ports:
+      - "50012:50010" # Cambié el puerto a 50012 para evitar conflicto
+      - "50077:50075" # Cambié el puerto a 50077 para evitar conflicto
+      - "9872:9864"
     volumes:
       - hadoop_datanode3:/hadoop/dfs/data
     environment:
@@ -105,6 +117,7 @@ services:
 
   hive-server:
     image: bde2020/hive:2.3.2-postgresql-metastore
+    container_name: hive-server
     env_file:
       - ./hadoop-hive.env
     environment:
@@ -116,6 +129,7 @@ services:
 
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
+    container_name: hive-metastore
     env_file:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
@@ -126,9 +140,11 @@ services:
 
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
+    container_name: hive-metastore-postgresql
 
   presto-coordinator:
     image: shawnzhu/prestodb:0.181
+    container_name: presto-coordinator
     ports:
       - "8080:8080"
 
